@@ -1,6 +1,9 @@
 2.2.0
 -----
 - Optimize email retrieval by analyzing headers first before downloading entire email. Seeing 40%-60% reduction in running time in tests
+- Added options to use keepalive logic for larger inboxes to prevent timeout errors([incoming] inkeepalive= and [outgoing] outkeepalive= options in.rc file)
+- Added 'date' header to outgoing emails for RFC compliance (issue #77)
+- Added optional progress indicator to stdout to show emails are being read (issue #72)
 
 2.1.0
 -----
